--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-DATABASE_URL = postgresql+asyncpg://maks:maks123@local:5432/legislation
+DATABASE_URL = postgresql+asyncpg://maks:maks123@5.35.92.151:5432/legislation
 LOG_LEVEL=INFO
-LOG_DIR=logs
-LOG_FILE=web_log
-LEGISLATION_LIMIT=100
-CONTROLLER=http://localhost:8000
-COEFF_EXPIRE_SECONDS=0.05
+LEGISLATION_LIMIT=10
+CONTROLLER=https://test.botifybiz.ru
+COEFF_EXPIRE_SECONDS=0.0001
