--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = postgresql+asyncpg://maks:maks123@5.35.92.151:5432/legislation
+DATABASE_URL=postgresql+asyncpg://maks:maks123@5.35.92.151:5432/legislation
 LOG_LEVEL=INFO
 LEGISLATION_LIMIT=10
 CONTROLLER=https://test.botifybiz.ru
